samples/_failures_safe/1761604321_b27d92_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4b896eb4.c: In function ‘tokenize’:
./samples/SAFE/__tmp_4b896eb4.c:166:9: error: ‘token’ undeclared (first use in this function); did you mean ‘Token’?
  166 |     if (token
      |         ^~~~~
      |         Token
./samples/SAFE/__tmp_4b896eb4.c:166:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_4b896eb4.c:166:14: error: expected ‘)’ at end of input
  166 |     if (token
      |        ~     ^
      |              )
./samples/SAFE/__tmp_4b896eb4.c:166:5: error: expected declaration or statement at end of input
  166 |     if (token
      |     ^~
